<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="@color/blue"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Wc"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="13pt"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/STC"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="6pt"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/UserN"
        android:textColor="@color/black"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/PassW"
        android:textColor="@color/black"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:textSize="10pt" />
    <CheckBox
        android:id="@+id/chkRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rmb"
        android:textStyle="bold"
        android:textSize="5pt"/>

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/Go"
        android:textColor="@color/gray"
        android:textSize="5pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCreateAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/CreateAC"
        android:textColor="@color/gray"
        android:textSize="5pt"
        android:textStyle="bold" />

</LinearLayout>