<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/infor"
        android:textColor="@color/black"
        android:textSize="20pt"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/l_o_p"
        android:textAlignment="center"
        android:textSize="10pt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/mssv"
        android:textAlignment="center"
        android:textSize="10pt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/my_mail"
        android:textAlignment="center"
        android:textSize="10pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4pt"

            android:text="@string/phone"
            android:textAlignment="center"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtPhoneN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4pt"
            android:paddingTop="4pt"
            android:text="@string/id_phone"
            android:textAlignment="center"
            android:textSize="10pt" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/green"
            android:text="CALL Me"
            android:textSize="13pt" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="426dp"
        android:layout_height="339dp"
        android:layout_gravity="center" />




</LinearLayout>