<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/imgDaiDien"
        android:layout_width="168dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="ID: "
            android:textColor="@color/black"
            android:textSize="6pt"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txtTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ten"
            android:textColor="@color/black"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/txtPhong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ma_phong"
            android:textColor="@color/black"
            android:textSize="6pt" />

        <LinearLayout
            android:layout_width="243dp"
            android:layout_height="63dp"
            android:layout_margin="2dp"
            android:background="@color/blue"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btnSua"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:backgroundTint="@color/green"
                android:text="@string/sua"
                android:textColor="@color/white"
                android:textSize="3pt" />

            <Button
                android:id="@+id/btnXoa"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:backgroundTint="@color/green"
                android:text="@string/xoa"
                android:textColor="@color/white"
                android:textSize="3pt" />

            <Button
                android:id="@+id/btnChiTiet"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:backgroundTint="@color/green"
                android:text="@string/detail"
                android:textColor="@color/white"
                android:textSize="3pt" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>