<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imgDaiDien"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/blue"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnChup"
            android:layout_width="50pt"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10pt"
            android:backgroundTint="@color/green"
            android:text="@string/chup_anh"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnChonFile"
            android:layout_width="50pt"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10pt"
            android:backgroundTint="@color/green"
            android:text="@string/chon_anh"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/full_name_add"
            android:textColor="@color/black"
            android:textSize="10pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/room_add"
            android:textColor="@color/black"
            android:textSize="10pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPhong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/type_add"
            android:textColor="@color/black"
            android:textSize="10pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtLoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/adress_add"
            android:textColor="@color/black"
            android:textSize="10pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLuu"
            android:layout_width="50pt"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10pt"
            android:backgroundTint="@color/green"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="50pt"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10pt"
            android:backgroundTint="@color/green"
            android:text="@string/back_add" />

    </LinearLayout>

</LinearLayout>