<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/room_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtTenP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/room_code"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtMaP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/blue"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLuuP"
            android:layout_width="50pt"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10pt"
            android:backgroundTint="@color/green"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnThoatP"
            android:layout_width="50pt"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10pt"
            android:backgroundTint="@color/green"
            android:text="@string/back_add" />

    </LinearLayout>
</LinearLayout>