<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/room_code"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtMa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="VD : TC. . ."
            android:textSize="8pt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/room_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="VD :Tài Chính. . ."
            android:textSize="8pt" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/blue"

        >

        <Button
            android:id="@+id/btnLuuP"
            android:layout_width="50pt"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10pt"
            android:backgroundTint="@color/green"
            android:text="@string/add_add" />

        <Button
            android:id="@+id/btnThoatP"
            android:layout_width="50pt"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10pt"
            android:backgroundTint="@color/green"
            android:text="@string/back_add" />

    </LinearLayout>

</LinearLayout>