<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4pt"
        android:text="@string/ListNv"
        android:textColor="@color/black"
        android:textSize="10pt"
        android:textStyle="bold"
        android:background="@color/blue"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1pt"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ListView
            android:id="@+id/lView"
            android:layout_width="match_parent"
            android:layout_height="591dp"
            android:layout_weight="1"
            android:dividerHeight="5pt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal"
        android:background="@color/blue"

        android:weightSum="2">

        <Button
            android:id="@+id/btnThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/them_nhan_vien"
            android:textColor="@color/white"
            android:textSize="6pt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPhong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/qlp"
            android:textColor="@color/white"
            android:textSize="6pt"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>

